--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+:root{
+    --placeholder: rgb(173, 6, 6);
+    --nav-bg: rgba(49, 49, 49, 0.973);
+    --white: rgb(248, 248, 248);
+    --bg: rgb(155, 155, 155);
+    --rounded-corners: 4px;
+}
+
 /* Makes padding and borders make more sense */
 *, *:before, *:after {
     box-sizing: border-box; 
@@ -10,5 +18,112 @@ html {
 body {
     font-size: 1.6rem;
     line-height: 1.5;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; /* Change */
+}
+
+h1, h2, h3, h4, p {
+    margin-top: 0;
+    margin-bottom: 1.6em;
+}
+
+p {
+    max-width: 90ch;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    margin-bottom: 1.5em;
+}
+
+header {
+    display: flex; /* User Story #15 */
+    justify-content: space-between;
+    align-items: center;
+    position: fixed; /* User Story #13 */
+    width: 100%;
+    z-index: 1;
+    background: var(--nav-bg); /* Change */
+    padding: .5em 1em;
+}
+
+header img {
+    background: var(--placeholder); /* Delete/Change */
+    height: 3em;
+    width: 20ch;
+}
+
+nav {
+    margin-right: 2ch;
+}
+
+nav a {
+    color: var(--white); /* Change */
+    font-size: 1.25em;
+    margin-left: 2ch;
+    text-decoration: none;
+}
+
+nav a:hover {
+    opacity: 0.8; /* Change */
+}
+
+main {
+    padding: 7em 0 3em 0; /* Change */
+    display: flex;
+    justify-content: center;
+    color: var(--white);
+}
+
+article {
+    flex: 0 1 60vw; /* Delete if not changed from 0 1 auto */
+    background: var(--bg); /* Delete/Change */
+    border-radius: var(--rounded-corners);
+    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#cards {
+    display: flex; /* Might be able to do this section with grid */
+    justify-content: center;
+    align-items: stretch;
+    text-align: center;
+}
+
+#cards div {
+    width: 33.33333%;
+}
+
+#cards img {
+    display: inline-block; 
+    background: var(--placeholder); /* Delete/Change */
+    height: 10em; /* Change */
+    width: 10em; /* Change */
+    border-radius: 50%;
+}
+
+.small-text {
+    font-size: 0.75em;
+    font-weight: normal;
+}
+
+#cards ul, #cards p{
+    text-align: left;
+}
+
+footer {
+    text-align: right;
+    padding: 1em;
+    background: var(--bg); /* Change */
+}
+
+footer li, footer p {
+    display: inline-block;
+    margin: 0;
 }
